--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,10 @@ h2 {
   font-size: 30px;
   color:  #ffffff;
 }
+.binfo{ 
+  font-size: 25px;
+  color:  #222222;
+}
 h3 { 
   font-size: 22px;
 }
